# playground

./: CLAUDE.md  README.md
.github/workflows/: soundhoard-docker.yml  soundhoard-test.yml
soundhoard/: .envrc  Dockerfile  Makefile  README.md  pyproject.toml
soundhoard/soundhoard/: bot.py  config.py  downloader.py
soundhoard/tests/: test_downloader.py
